# YaroWX

./: CMakeLists.txt  README.md
src/common/: CMakeLists.txt
src/common/include/: ConfigManager.h  FormatTime.h  FriendRequestItem.h
src/common/include/models/: Contact.h  Conversation.h  FriendRequest.h  Group.h  GroupMember.h  LocalMoment.h  MediaCache.h  Message.h  User.h
src/common/src/: ConfigManager.cpp
src/controller/: CMakeLists.txt
src/controller/include/: AppController.h
src/controller/include/contactController/: ContactController.h  ContactTreeModel.h
src/controller/include/conversationController/: ChatListModel.h  ConversationController.h
src/controller/include/databaseInitializationController/: DatabaseInitializationController.h
src/controller/include/groupController/: GroupController.h
src/controller/include/localMomentController/: LocalMomentController.h
src/controller/include/messageController/: ChatMessagesModel.h  MessageController.h
src/controller/include/userController/: UserController.h
src/controller/src/: AppController.cpp
src/controller/src/contactController/: ContactController.cpp  ContactTreeModel.cpp
src/controller/src/conversationController/: ChatListModel.cpp  ConversationController.cpp
src/controller/src/databaseInitializationController/: DatabaseInitializationController.cpp
src/controller/src/groupController/: GroupController.cpp
src/controller/src/localMomentController/: LocalMomentController.cpp
src/controller/src/messageController/: ChatMessagesModel.cpp  FileCopyProcessor.cpp  MessageController.cpp
src/controller/src/userController/: UserController.cpp
src/media/include/: AudioPlayer.h  ThumbnailResourceManager.h  VideoProcessingTask.h
src/media/src/: AudioPlayer.cpp  ImageProcessor.cpp  ThumbnailResourceManager.cpp  VideoProcessingTask.cpp  VideoProcessor.cpp
src/network/: CMakeLists.txt
src/network/include/: FileDownloader.h  FileUploader.h  LoginManager.h  NetworkDataLoader.h  WebSocketManager.h  network.h
src/network/src/: FileDownloader.cpp  FileUploader.cpp  LoginManager.cpp  NetworkDataLoader.cpp  WebSocketManager.cpp  network.cpp
src/storage/: CMakeLists.txt
src/storage/include/: ContactDao.h  DatabaseInitializer.h  DatabaseManager.h  DatabaseSchema.h  DbConnectionManager.h  MessageDao.h  ORM.h  ORM_Macros.h
src/storage/include/databaseTable/: LocalMomentTable.h
src/storage/src/: ContactDao.cpp  DatabaseInitializer.cpp  DatabaseManager.cpp  DatabaseSchema.cpp  MessageDao.cpp
src/storage/src/databaseTable/: LocalMomentTable.cpp  UserTable.cpp
src/ui/: CMakeLists.txt
src/ui/include/: AvatarButton.h  ExpandableTextEdit.h  LoginAndRegisterDialog.h  WeChatWidget.h
src/ui/include/Delegate/: ChatListDelegate.h  ChatMessageDelegate.h
src/ui/include/ListView/: ContactTreeView.h
src/ui/include/customControls/: CustomListView.h  CustomTreeView.h  FlowLayout.h  ImgLabel.h  MessageTextEdit.h  SplashDialog.h
src/ui/include/dialogBox/: AddDialog.h  AddFriendDialog.h  AddFriendRequestDialog.h  ClickClosePopup.h  CurrentUserInfoDialog.h  RightPopover.h  StrangerWidget.h  UserInfoWidget.h
src/ui/include/media/: CustomGraphicsView.h  MediaDialog.h  VideoPlayer.h
src/ui/include/moment/: CommentInputWidget.h  CommentItemWidget.h  MomentEditWidget.h  MomentItemWidget.h  MomentWidgets.h
src/ui/res/: icon.qrc
src/ui/src/: AppInitialize.cpp  AvatarButton.cpp  CustomListView.cpp  ExpandableTextEdit.cpp  ImgLabel.cpp  LoginAndRegisterDialog.cpp  LoginAndRegisterDialog.ui  MessageTextEdit.cpp  WeChatWidget.cpp  WeChatWidget.ui  main.cpp
src/ui/src/Delegate/: ChatListDelegate.cpp  ChatMessageDelegate.cpp  ContactItemDelegate.cpp
src/ui/src/ListView/: ChatListView.cpp  ContactTreeView.cpp
src/ui/src/customControls/: AvatarButton.cpp  CustomTreeView.cpp  ImgLabel.cpp  SplashDialog.cpp
src/ui/src/dialogBox/: AddDialog.cpp  AddDialog.ui  AddFriendDialog.cpp  AddFriendDialog.ui  AddFriendRequestDialog.cpp  AddFriendRequestDialog.ui  CurrentUserInfoDialog.cpp  CurrentUserInfoDialog.ui  FloatingDialog.cpp  FloatingDialog.ui  MoreDialog.cpp  NewFriend.ui  RightPopover.cpp  RightPopover.ui  StrangerWidget.cpp  StrangerWidget.ui  UserInfoWidget.cpp  UserInfoWidget.ui
src/ui/src/media/: CustomGraphicsView.cpp  MediaDialog.cpp  VideoPlayer.cpp  VoiceRecordDialog.cpp
src/ui/src/moment/: CommentInputWidget.cpp  CommentInputWidget.ui  CommentItemWidget.cpp  CommentItemWidget.ui  MomentEditWidget.cpp  MomentEditWidget.ui  MomentItemWidget.cpp  MomentItemWidget.ui  MomentMainWidget.ui  MomentWidgets.cpp
test/: GenerationWorker.cpp  GenerationWorker.h  TestWidget.cpp
test/aiClient/: DoubaoAi.cpp  DoubaoAi.h
